@@ -32,6 +32,7 @@
     <buildFile url="file://$PROJECT_DIR$/solr/contrib/extraction/build.xml" />
     <buildFile url="file://$PROJECT_DIR$/solr/contrib/langid/build.xml" />
     <buildFile url="file://$PROJECT_DIR$/solr/contrib/uima/build.xml" />
+    <buildFile url="file://$PROJECT_DIR$/solr/contrib/velocity/build.xml" />
     <buildFile url="file://$PROJECT_DIR$/solr/solrj/build.xml" />
     <buildFile url="file://$PROJECT_DIR$/solr/test-framework/build.xml" />
     <buildFile url="file://$PROJECT_DIR$/solr/webapp/build.xml" />
