@@ -1,0 +1,10 @@
+<component name="libraryTable">
+  <library name="Solr velocity library">
+    <CLASSES>
+      <root url="file://$PROJECT_DIR$/solr/contrib/velocity/lib" />
+    </CLASSES>
+    <JAVADOC />
+    <SOURCES />
+    <jarDirectory url="file://$PROJECT_DIR$/solr/contrib/velocity/lib" recursive="false" />
+  </library>
+</component>
