@@ -32,6 +32,7 @@
       <module filepath="$PROJECT_DIR$/solr/contrib/extraction/extraction.iml" />
       <module filepath="$PROJECT_DIR$/solr/contrib/langid/langid.iml" />
       <module filepath="$PROJECT_DIR$/solr/contrib/uima/uima.iml" />
+      <module filepath="$PROJECT_DIR$/solr/contrib/velocity/velocity.iml" />
     </modules>
   </component>
 </project>
