@@ -24,6 +24,18 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|SolrTestCaseJ4
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|response
 operator|.
 name|SolrQueryResponse
@@ -62,13 +74,29 @@ begin_import
 import|import
 name|org
 operator|.
-name|apache
+name|junit
 operator|.
-name|solr
+name|Before
+import|;
+end_import
+
+begin_import
+import|import
+name|org
 operator|.
-name|util
+name|junit
 operator|.
-name|AbstractSolrTestCase
+name|BeforeClass
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Test
 import|;
 end_import
 
@@ -98,32 +126,64 @@ specifier|public
 class|class
 name|VelocityResponseWriterTest
 extends|extends
-name|AbstractSolrTestCase
+name|SolrTestCaseJ4
 block|{
 annotation|@
-name|Override
-DECL|method|getSchemaFile
+name|BeforeClass
+DECL|method|beforeClass
 specifier|public
-name|String
-name|getSchemaFile
+specifier|static
+name|void
+name|beforeClass
 parameter_list|()
+throws|throws
+name|Exception
 block|{
-return|return
-literal|"schema.xml"
-return|;
-block|}
-annotation|@
-name|Override
-DECL|method|getSolrConfigFile
-specifier|public
-name|String
-name|getSolrConfigFile
-parameter_list|()
-block|{
-return|return
+name|initCore
+argument_list|(
 literal|"solrconfig.xml"
-return|;
+argument_list|,
+literal|"schema.xml"
+argument_list|,
+name|getFile
+argument_list|(
+literal|"velocity/solr"
+argument_list|)
+operator|.
+name|getAbsolutePath
+argument_list|()
+argument_list|)
+expr_stmt|;
 block|}
+annotation|@
+name|Override
+annotation|@
+name|Before
+DECL|method|setUp
+specifier|public
+name|void
+name|setUp
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|super
+operator|.
+name|setUp
+argument_list|()
+expr_stmt|;
+name|clearIndex
+argument_list|()
+expr_stmt|;
+name|assertU
+argument_list|(
+name|commit
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
 DECL|method|testTemplateName
 specifier|public
 name|void
@@ -206,6 +266,7 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+comment|// TODO: add test that works with true Solr requests and wt=velocity to ensure the test tests that it's registered properly, etc
 block|}
 end_class
 
