@@ -211,6 +211,16 @@ name|getCanonicalPath
 argument_list|()
 argument_list|)
 expr_stmt|;
+comment|// disable VelocityResponseWriter from example configuration
+name|System
+operator|.
+name|setProperty
+argument_list|(
+literal|"solr.velocity.enabled"
+argument_list|,
+literal|"false"
+argument_list|)
+expr_stmt|;
 name|context
 operator|=
 name|context
