@@ -640,6 +640,15 @@ name|solrHome
 argument_list|)
 expr_stmt|;
 block|}
+name|System
+operator|.
+name|setProperty
+argument_list|(
+literal|"solr.velocity.enabled"
+argument_list|,
+literal|"false"
+argument_list|)
+expr_stmt|;
 name|initCore
 argument_list|()
 expr_stmt|;
